Better readme and stuff

--- a/converter/output.html
+++ b/converter/output.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>MariaDB-Document</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -67,6 +67,7 @@
 </li>
 <li class="mariadb_from_10_6"><a href="#examples" title="Examples">Examples</a></li>
 <li class="mariadb_from_10_6"><a href="#see-also" title="See Also">See Also</a> </li></ol>
+
 </div>
 <h2 class="anchored_heading" id="description">Description</h2>
 <p><code>SELECT</code> is used to retrieve rows selected from one or more
@@ -190,6 +191,7 @@ have been in the result, if there would be no <a href="https://mariadb.com/kb/en
 </li>
 <li class=""><a href="#examples" title="Examples">Examples</a></li>
 <li class=""><a href="#see-also" title="See Also">See Also</a> </li></ol>
+
 </div>
 <h2 class="anchored_heading" id="description">Description</h2>
 <p>Use the <code>LIMIT</code> clause to restrict the number of returned rows. When you use a single
@@ -339,6 +341,7 @@ many rows, and thus use too many resources. See <a href="https://mariadb.com/kb/
 <li class="mariadb_from_10_3_2"><a href="#description" title="Description">Description</a></li>
 <li class="mariadb_from_10_3_2"><a href="#examples" title="Examples">Examples</a></li>
 <li class="mariadb_from_10_3_2"><a href="#see-also" title="See Also">See Also</a> </li></ol>
+
 </div>
 <h2 class="anchored_heading" id="description">Description</h2>
 <p>Use the <code>ORDER BY</code> clause to order a resultset, such as that are returned from a <a href="https://mariadb.com/kb/en/select/">SELECT</a>
@@ -488,6 +491,7 @@ UNION [ALL | DISTINCT] SELECT ...
 </li>
 <li class="mariadb_from_10_1_1"><a href="#examples" title="Examples">Examples</a></li>
 <li class="mariadb_from_10_1_1"><a href="#see-also" title="See Also">See Also</a> </li></ol>
+
 </div>
 <h2 class="anchored_heading" id="description">Description</h2>
 <p><code>UNION</code> is used to combine the results from multiple <a href="https://mariadb.com/kb/en/select/">SELECT</a> statements into a single result set.</p>
