--- a/converter/full_html/a_.html
+++ b/converter/full_html/a_.html
@@ -12,7 +12,7 @@
 
     <title>SELECT - MariaDB Knowledge Base</title>
 
-    css-link
+    <link href="/kb/static/css/main.9a0d7dcebefd.css" rel="stylesheet" type="text/css" />
 
     
 
@@ -256,7 +256,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2022-02-04 10:02">1 week, 2 days ago</span></dd>
+<span class="datetime" title="2022-02-04 10:02">1 week, 4 days ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
