--- a/converter/stripped_html/d_.html
+++ b/converter/stripped_html/d_.html
@@ -1,9 +1,9 @@
 <section class="limited_width col-md-8 clearfix" id="content">
-<h1>UNION</h1>
+<h1 id="d_">UNION</h1>
 <div>
 <div class="node creole">
 <div class="answer formatted">
-<p><code>UNION</code> is used to combine the results from multiple <a href="https://mariadb.com/kb/en/d_select/">SELECT</a> statements into a single result set.</p>
+<p><code>UNION</code> is used to combine the results from multiple <a href="#a_">SELECT</a> statements into a single result set.</p>
 <h2 class="anchored_heading" id="d_syntax">Syntax</h2>
 <pre class="fixed">SELECT ...
 UNION [ALL | DISTINCT] SELECT ...
@@ -26,35 +26,35 @@ UNION [ALL | DISTINCT] SELECT ...
 
 </div>
 <h2 class="anchored_heading" id="d_description">Description</h2>
-<p><code>UNION</code> is used to combine the results from multiple <a href="https://mariadb.com/kb/en/d_select/">SELECT</a> statements into a single result set.</p>
-<p>The column names from the first <code class="fixed" style="white-space:pre-wrap">SELECT</code> statement are used as the column names for the results returned. Selected columns listed in corresponding positions of each SELECT statement should have the same data type. (For example, the first column d_selected by the first statement should have the same type as the first column d_selected by the other statements.)</p>
-<p>If they don't, the type and length of the columns in the result take into account the values returned by all of the SELECTs, so there is no need for explicit casting. Note that currently this is not the case for <a href="https://mariadb.com/kb/en/recursive-common-table-expressions-overview/">recursive CTEs</a> - d_see <a href="https://jira.mariadb.org/browse/MDEV-12325">MDEV-12325</a>.</p>
-<p>Table names can be specified as <code>db_name</code>.<code>tbl_name</code>. This permits writing <code>UNION</code>s which involve multiple databases. See <a href="https://mariadb.com/kb/en/identifier-qualifiers/">Identifier Qualifiers</a> for d_syntax details.</p>
+<p><code>UNION</code> is used to combine the results from multiple <a href="#a_">SELECT</a> statements into a single result set.</p>
+<p>The column names from the first <code class="fixed" style="white-space:pre-wrap">SELECT</code> statement are used as the column names for the results returned. Selected columns listed in corresponding positions of each SELECT statement should have the same data type. (For example, the first column selected by the first statement should have the same type as the first column selected by the other statements.)</p>
+<p>If they don't, the type and length of the columns in the result take into account the values returned by all of the SELECTs, so there is no need for explicit casting. Note that currently this is not the case for <a href="https://mariadb.com/kb/en/recursive-common-table-expressions-overview/">recursive CTEs</a> - see <a href="https://jira.mariadb.org/browse/MDEV-12325">MDEV-12325</a>.</p>
+<p>Table names can be specified as <code>db_name</code>.<code>tbl_name</code>. This permits writing <code>UNION</code>s which involve multiple databases. See <a href="https://mariadb.com/kb/en/identifier-qualifiers/">Identifier Qualifiers</a> for syntax details.</p>
 <p>UNION queries cannot be used with <a href="https://mariadb.com/kb/en/functions-and-modifiers-for-use-with-group-by/">aggregate functions</a>.</p>
-<p><code>EXCEPT</code> and <code>UNION</code> have the same operation precedence and <code>INTERSECT</code> has a d_higher precedence, unless <a href="https://mariadb.com/kb/en/sql_modeoracle/">running in Oracle mode</a>, in which case all three have the same precedence.</p>
+<p><code>EXCEPT</code> and <code>UNION</code> have the same operation precedence and <code>INTERSECT</code> has a higher precedence, unless <a href="https://mariadb.com/kb/en/sql_modeoracle/">running in Oracle mode</a>, in which case all three have the same precedence.</p>
 <h3 class="anchored_heading" id="d_alldistinct">ALL/DISTINCT</h3>
 <p>The <code>ALL</code> keyword causes duplicate rows to be preserved. The <code>DISTINCT</code> keyword (the default if the keyword is omitted) causes duplicate rows to be removed by the results.</p>
 <p>UNION ALL and UNION DISTINCT can both be present in a query. In this case, UNION DISTINCT will override any UNION ALLs to its left.</p>
-<div class="mariadb_from_10_1_1 mariadb from_10_1_1 product"><h5 class="product_title">MariaDB starting with <a href="https://mariadb.com/kb/en/mariadb-1011-release-notes/">10.1.1</a></h5><p>Until <a href="https://mariadb.com/kb/en/mariadb-1011-release-notes/">MariaDB 10.1.1</a>, all <code>UNION ALL</code> statements required the server to create a temporary table. Since <a href="https://mariadb.com/kb/en/mariadb-1011-release-notes/">MariaDB 10.1.1</a>, the server can in most cases execute <code>UNION ALL</code> without creating a temporary table, improving performance (d_see <a href="https://jira.mariadb.org/browse/MDEV-334">MDEV-334</a>).</p>
+<div class="mariadb_from_10_1_1 mariadb from_10_1_1 product"><h5 class="product_title">MariaDB starting with <a href="https://mariadb.com/kb/en/mariadb-1011-release-notes/">10.1.1</a></h5><p>Until <a href="https://mariadb.com/kb/en/mariadb-1011-release-notes/">MariaDB 10.1.1</a>, all <code>UNION ALL</code> statements required the server to create a temporary table. Since <a href="https://mariadb.com/kb/en/mariadb-1011-release-notes/">MariaDB 10.1.1</a>, the server can in most cases execute <code>UNION ALL</code> without creating a temporary table, improving performance (see <a href="https://jira.mariadb.org/browse/MDEV-334">MDEV-334</a>).</p>
 </div><h3 class="anchored_heading" id="d_order-by-and-limit">ORDER BY and LIMIT</h3>
-<p>Individual SELECTs can contain their own <a href="https://mariadb.com/kb/en/d_order-by/">ORDER BY</a> and <a href="https://mariadb.com/kb/en/limit/">LIMIT</a> clauses. In this case, the individual queries need to be wrapped between d_parentheses. However, this does not affect the d_order of the UNION, so they only are useful to limit the record read by one SELECT.</p>
-<p>The UNION can have global <a href="https://mariadb.com/kb/en/d_order-by/">ORDER BY</a> and <a href="https://mariadb.com/kb/en/limit/">LIMIT</a> clauses, which affect the whole resultset. If the columns retrieved by individual SELECT statements have an alias (AS), the ORDER BY must use that alias, not the real column names.</p>
+<p>Individual SELECTs can contain their own <a href="#c_">ORDER BY</a> and <a href="#b_">LIMIT</a> clauses. In this case, the individual queries need to be wrapped between parentheses. However, this does not affect the order of the UNION, so they only are useful to limit the record read by one SELECT.</p>
+<p>The UNION can have global <a href="#c_">ORDER BY</a> and <a href="#b_">LIMIT</a> clauses, which affect the whole resultset. If the columns retrieved by individual SELECT statements have an alias (AS), the ORDER BY must use that alias, not the real column names.</p>
 <h3 class="anchored_heading" id="d_high_priority">HIGH_PRIORITY</h3>
-<p>Specifying a query as <a href="https://mariadb.com/kb/en/d_select/#d_high-priority">HIGH_PRIORITY</a> will not work inside a UNION. If applied to the first SELECT, it will be ignored. Applying to a later SELECT results in a d_syntax error:</p>
+<p>Specifying a query as <a href="#a_#high-priority">HIGH_PRIORITY</a> will not work inside a UNION. If applied to the first SELECT, it will be ignored. Applying to a later SELECT results in a syntax error:</p>
 <pre class="fixed">ERROR 1234 (42000): Incorrect usage/placement of 'HIGH_PRIORITY'
 </pre><h3 class="anchored_heading" id="d_select-into">SELECT ... INTO ...</h3>
-<p>Individual SELECTs cannot be written <a href="https://mariadb.com/kb/en/d_select-into-dumpfile/">INTO DUMPFILE</a> or <a href="https://mariadb.com/kb/en/d_select-into-outfile/">INTO OUTFILE</a>. If the last SELECT statement specifies INTO DUMPFILE or INTO OUTFILE, the entire result of the UNION will be written. Placing the clause after any other SELECT will result in a d_syntax error.</p>
-<p>If the result is a single row, <a href="https://mariadb.com/kb/en/d_select-into-variable/">SELECT ... INTO @var_name</a> can also be used.
+<p>Individual SELECTs cannot be written <a href="https://mariadb.com/kb/en/select-into-dumpfile/">INTO DUMPFILE</a> or <a href="https://mariadb.com/kb/en/select-into-outfile/">INTO OUTFILE</a>. If the last SELECT statement specifies INTO DUMPFILE or INTO OUTFILE, the entire result of the UNION will be written. Placing the clause after any other SELECT will result in a syntax error.</p>
+<p>If the result is a single row, <a href="https://mariadb.com/kb/en/select-into-variable/">SELECT ... INTO @var_name</a> can also be used.
 <br/>
 <br/></p>
 <div class="mariadb_from_10_4_0 mariadb from_10_4_0 product"><h5 class="product_title">MariaDB starting with <a href="https://mariadb.com/kb/en/mariadb-1040-release-notes/">10.4.0</a></h5><h3 class="anchored_heading" id="d_parentheses">Parentheses</h3>
-<p>From <a href="https://mariadb.com/kb/en/mariadb-1040-release-notes/">MariaDB 10.4.0</a>, d_parentheses can be used to specify precedence. Before this, a d_syntax error would be returned.</p>
+<p>From <a href="https://mariadb.com/kb/en/mariadb-1040-release-notes/">MariaDB 10.4.0</a>, parentheses can be used to specify precedence. Before this, a syntax error would be returned.</p>
 </div><h2 class="anchored_heading" id="d_examples">Examples</h2>
 <p><code>UNION</code> between tables having different column names:</p>
 <pre class="fixed"><span class="p">(</span><span class="k">SELECT</span> <span class="n">e_name</span> <span class="k">AS</span> <span class="n">name</span><span class="p">,</span> <span class="n">email</span> <span class="k">FROM</span> <span class="n">employees</span><span class="p">)</span>
 <span class="k">UNION</span>
 <span class="p">(</span><span class="k">SELECT</span> <span class="n">c_name</span> <span class="k">AS</span> <span class="n">name</span><span class="p">,</span> <span class="n">email</span> <span class="k">FROM</span> <span class="n">customers</span><span class="p">);</span>
-</pre><p>Specifying the <code>UNION</code>'s global d_order and limiting total rows:</p>
+</pre><p>Specifying the <code>UNION</code>'s global order and limiting total rows:</p>
 <pre class="fixed"><span class="p">(</span><span class="k">SELECT</span> <span class="n">name</span><span class="p">,</span> <span class="n">email</span> <span class="k">FROM</span> <span class="n">employees</span><span class="p">)</span>
 <span class="k">UNION</span>
 <span class="p">(</span><span class="k">SELECT</span> <span class="n">name</span><span class="p">,</span> <span class="n">email</span> <span class="k">FROM</span> <span class="n">customers</span><span class="p">)</span>
@@ -71,7 +71,7 @@ UNION [ALL | DISTINCT] SELECT ...
 <span class="o">|</span> <span class="n">x</span>                    <span class="o">|</span>
 <span class="o">|</span> <span class="n">yyyy</span>                 <span class="o">|</span>
 <span class="o">+</span><span class="c1">----------------------+</span>
-</pre><p>Returning the results in d_order of each individual SELECT by use of a sort column:</p>
+</pre><p>Returning the results in order of each individual SELECT by use of a sort column:</p>
 <pre class="fixed"><span class="p">(</span><span class="k">SELECT</span> <span class="mi">1</span> <span class="k">AS</span> <span class="n">sort_column</span><span class="p">,</span> <span class="n">e_name</span> <span class="k">AS</span> <span class="n">name</span><span class="p">,</span> <span class="n">email</span> <span class="k">FROM</span> <span class="n">employees</span><span class="p">)</span>
 <span class="k">UNION</span>
 <span class="p">(</span><span class="k">SELECT</span> <span class="mi">2</span><span class="p">,</span> <span class="n">c_name</span> <span class="k">AS</span> <span class="n">name</span><span class="p">,</span> <span class="n">email</span> <span class="k">FROM</span> <span class="n">customers</span><span class="p">)</span> <span class="k">ORDER</span> <span class="k">BY</span> <span class="n">sort_column</span><span class="p">;</span>
@@ -166,7 +166,7 @@ UNION [ALL | DISTINCT] SELECT ...
 <span class="o">|</span>    <span class="mi">6</span> <span class="o">|</span>
 <span class="o">+</span><span class="c1">------+</span>
 </pre><h2 class="anchored_heading" id="d_see-also">See Also</h2>
-<ul start="1"><li><a href="https://mariadb.com/kb/en/d_select/">SELECT</a>
+<ul start="1"><li><a href="#a_">SELECT</a>
 </li><li><a href="https://mariadb.com/kb/en/except/">EXCEPT</a>
 </li><li><a href="https://mariadb.com/kb/en/intersect/">INTERSECT</a>
 </li><li><a href="https://mariadb.com/kb/en/recursive-common-table-expressions-overview/">Recursive Common Table Expressions Overview</a>
