--- a/CleanConverter/html/alter-server.html
+++ b/CleanConverter/html/alter-server.html
@@ -256,7 +256,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2021-04-07 23:51">10 months, 4 weeks ago</span></dd>
+<span class="datetime" title="2021-04-07 23:51">11 months ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
