--- a/CleanConverter/html/alter-view.html
+++ b/CleanConverter/html/alter-view.html
@@ -243,12 +243,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2010-04-02 19:05">11 years, 10 months ago</span></dd>
+<span class="datetime" title="2010-04-02 19:05">11 years, 11 months ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2021-04-24 23:21">9 months, 4 weeks ago</span></dd>
+<span class="datetime" title="2021-04-24 23:21">10 months, 1 week ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
