Added basic table of contents

--- a/CleanConverter/html/wsrep_sync_wait_upto_gtid.html
+++ b/CleanConverter/html/wsrep_sync_wait_upto_gtid.html
@@ -605,7 +605,7 @@
                             <p>Subscribe to our newsletter!</p>
                             <script src="//app-sj15.marketo.com/js/forms2/js/forms2.min.js"></script><form id="mktoForm_1498"></form>
                             <script>
-                                <!--//--><![CDATA[// ><!--
+                                <!--//--><![CDATA[// ><--
                                 MktoForms2.loadForm("//app-sj15.marketo.com", "573-PXI-984", 1498);
                                 //--><!]]]]><![CDATA[>
                                 //--><!]]>
