Fixed small pdf issues and improved logging

--- a/CleanConverter/used/boilerplate.html
+++ b/CleanConverter/used/boilerplate.html
@@ -9,6 +9,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         css-link
     </head>
-    <body class = "mpkb">
+    <body class = "mpkb nodes products nodes_view jqui">
     </body>
 </html>
