--- a/Converter/static_HTML/cover_page.html
+++ b/Converter/static_HTML/cover_page.html
@@ -1,2 +1,2 @@
 
-<img style="margin-top: 250;" src="file:///C:/Users/User/Documents/git_repos/mariadb-pdf/Converter/Cover.jpg">
+<img style="margin-top: 250;" src="Cover.jpg">
