General Improvements and fixes

--- a/Converter/static_HTML/boilerplate.html
+++ b/Converter/static_HTML/boilerplate.html
@@ -9,6 +9,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link href="https://mariadb.com/kb/static/css/main.9a0d7dcebefd.css" rel="stylesheet" type="text/css" />
         <style>
+            body {
+                font-family: "Helvetica-Neue"; /* Changes PDF Font */
+            }
             .pdfhorizontal_dotted_line {
                 position: relative;
             }
@@ -28,6 +31,7 @@
                 z-index: -1;
                 border-top: 2px dotted black;
             }
+    
             a[href ^= "http"]:after {
                 content: " " url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAVklEQVR4Xn3PgQkAMQhDUXfqTu7kTtkpd5RA8AInfArtQ2iRXFWT2QedAfttj2FsPIOE1eCOlEuoWWjgzYaB/IkeGOrxXhqB+uA9Bfcm0lAZuh+YIeAD+cAqSz4kCMUAAAAASUVORK5CYII=);    
             }
