--- a/Converter/static_HTML/boilerplate.html
+++ b/Converter/static_HTML/boilerplate.html
@@ -9,8 +9,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link href="https://mariadb.com/kb/static/css/main.9a0d7dcebefd.css" rel="stylesheet" type="text/css" />
         <style>
+
             body {
-                font-family: "Helvetica-Neue"; /* Changes PDF Font */
+                font-family: "Arial";
             }
             .pdfhorizontal_dotted_line {
                 position: relative;
